--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,13 +1,27 @@
-  <!-- Sidebar -->
-  <div class="bg-light border-right" id="sidebar-wrapper">
-    <div class="sidebar-heading">IT</div>
-    <div class="list-group list-group-flush">
-      <a  class="list-group-item list-group-item-action bg-light">Resumen de cuenta corriente</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-      <a routerLink="/recursos" class="list-group-item list-group-item-action bg-light">saldo de envases</a>
-      <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
-    </div>
+
+<!-- Sidebar -->
+<div class="border-right" id="sidebar-wrapper">
+  <div class="sidebar-heading">
+    <img src="assets/logo.png" alt="Logo ABinBev">
   </div>
-  <!-- /#sidebar-wrapper -->
+
+  <div class="list-group list-group-flush">
+    <h4>Ventas</h4>
+    <a class="list-group-item list-group-item-action ">Avances de ventas</a>
+    <a class="list-group-item list-group-item-action ">Cierre de Ventas Mensuales</a>
+    <a class="list-group-item list-group-item-action ">Cierre de Ventas Acumulado</a>
+    <a class="list-group-item list-group-item-action ">Stock SIID</a>
+    <h4>Créditos y Cobranzas</h4>
+    <a class="list-group-item list-group-item-action ">Composición de Deuda de Cuenta Corriente</a>
+    <a  class="list-group-item list-group-item-action ">Resumen de Cuenta Corriente
+    </a>
+    <a href="#" class="list-group-item list-group-item-action ">Situación Crediticia</a>
+  <!--   <a href="#" class="list-group-item list-group-item-action ">Detalles de Pagos</a> -->
+    <a class="list-group-item list-group-item-action ">Saldo de Envases</a>
+    <a href="#" class="list-group-item list-group-item-action ">Movimiento de Envases</a>
+    <h4>Logística</h4>
+    <a routerLink='recursos' class="list-group-item list-group-item-action ">Saldo de Envases</a>
+    <a href="#" class="list-group-item list-group-item-action ">Movimiento de Envases</a>
+  </div>
+</div>
+<!-- /#sidebar -->
