--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,4 +1,3 @@
-
 #sidebar-wrapper {
   min-height: 100vh;
   margin-left: -15rem;
@@ -11,10 +10,39 @@
 #sidebar-wrapper .sidebar-heading {
   padding: 0.875rem 1.25rem;
   font-size: 1.2rem;
+  height: 84px;
+  img {
+    width: 149px ;
+    margin-left: 10px;
+    height: 35px;
+  }
 }
 
 #sidebar-wrapper .list-group {
   width: 350px;
+  padding: 29px;
+
+  .list-group-item{
+    border:0px;
+  }
+
+  .list-group-item-action:focus, .list-group-item-action:hover {
+
+    opacity: 0.5;
+    background-color: #F57232
+  }
+
+  .list-item a{
+      font-family: 'Rubik', sans-serif;
+      font-size:20px;
+      color: #707070; 
+  }
+
+  h4 {
+    font-size: 20px;
+    font-family: 'Rubik', sans-serif;
+    color: #F57232;
+  }
 }
 
 #page-content-wrapper {
